--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
-    <h1>tes</h1>
+    <h5>Ijul Ganteng AnaK Mama</h5>
+    <h1>Halo Julian Halo Halo Halo</h1>
 </body>
 </html>
