--- a/index.html
+++ b/index.html
@@ -7,7 +7,81 @@
     
 </head>
 <body>
-    <h5>Ijul Ganteng AnaK Mama</h5>
-    <h1>Halo Julian Halo Halo Halo</h1>
+    <!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello, Rizky Julian!</title>
+    <style>
+        /* Gaya dasar untuk body */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Font modern dan bersih */
+            display: flex; /* Untuk menempatkan konten di tengah */
+            justify-content: center; /* Horizontally center */
+            align-items: center; /* Vertically center */
+            min-height: 100vh; /* Memastikan body mengisi seluruh tinggi viewport */
+            margin: 0;
+            background: linear-gradient(135deg, #f0f4f8 0%, #d9e2ec 100%); /* Gradien latar belakang lembut */
+            color: #333; /* Warna teks utama */
+            overflow: hidden; /* Mencegah scroll jika ada elemen di luar */
+        }
+
+        /* Gaya untuk kontainer teks */
+        .container {
+            background-color: rgba(255, 255, 255, 0.8); /* Background putih transparan */
+            padding: 40px 60px; /* Padding lebih besar */
+            border-radius: 15px; /* Sudut lebih membulat */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); /* Bayangan lembut */
+            text-align: center;
+            backdrop-filter: blur(5px); /* Efek blur pada latar belakang kontainer */
+            -webkit-backdrop-filter: blur(5px); /* Kompatibilitas Safari */
+            border: 1px solid rgba(255, 255, 255, 0.3); /* Border tipis transparan */
+        }
+
+        /* Gaya untuk heading */
+        h1 {
+            color: #6a8eab; /* Warna biru keabu-abuan yang menenangkan */
+            font-size: 3.5em; /* Ukuran font lebih besar */
+            margin-bottom: 15px;
+            letter-spacing: 2px; /* Jarak antar huruf */
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.05); /* Bayangan teks lembut */
+        }
+
+        /* Gaya untuk paragraf (opsional, jika ingin menambahkan teks lain) */
+        p {
+            color: #888; /* Warna abu-abu yang lebih terang */
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+
+        /* Dekorasi tambahan (opsional) */
+        .decor {
+            position: absolute;
+            opacity: 0.2;
+            font-size: 5em;
+            color: #aed6f1; /* Warna biru muda */
+            pointer-events: none; /* Agar tidak mengganggu interaksi mouse */
+        }
+
+        .decor.top-left { top: 10%; left: 10%; transform: rotate(-20deg); }
+        .decor.bottom-right { bottom: 10%; right: 10%; transform: rotate(30deg); }
+        .decor.center-right { top: 50%; right: 5%; transform: translateY(-50%) rotate(10deg); font-size: 3em; }
+
+    </style>
+</head>
+<body>
+
+    <span class="decor top-left">✨</span>
+    <span class="decor bottom-right">☁️</span>
+    <span class="decor center-right">🌿</span>
+
+    <div class="container">
+        <h1>Rizky Julian</h1>
+        <p>A little bit of aesthetic for you.</p>
+    </div>
+
+</body>
+</html>
 </body>
 </html>
