--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, Rizky Julian!</title>
+    <title>Push ke 2!</title>
     <style>
         /* Gaya dasar untuk body */
         body {
@@ -80,6 +80,7 @@
         <h1>Rizky Julian</h1>
         <p>A little bit of aesthetic for you.</p>
     </div>
+
 
 </body>
 </html>
