--- a/index.html
+++ b/index.html
@@ -85,15 +85,16 @@
     <h2>Nabrak</h2>
 
 
-<<<<<<< HEAD
     <div class="container">
         <h1>Ini adalah Pembungkus</h1>
         <h2>ini bagian saya yang push</h2>
 
     </div>
-=======
 
->>>>>>> cd372492d7ea74b4a5a554abe2da2c5cb8ef59a9
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium quae maxime. Suscipit reiciendis voluptates dolores accusantium, quam voluptas at, dolorem tempora sequi, itaque praesentium tempore similique distinctio eaque quas.</p>
+    </div>
 
 </body>
 </html>
