--- a/index.html
+++ b/index.html
@@ -90,15 +90,13 @@
         <h2>ini bagian saya yang push</h2>
 
     </div>
-<<<<<<< HEAD
 
 
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium quae maxime. Suscipit reiciendis voluptates dolores accusantium, quam voluptas at, dolorem tempora sequi, itaque praesentium tempore similique distinctio eaque quas.</p>
     </div>
-=======
->>>>>>> a40867dd2d49a6f3ae9d7b59db1113c0faf02a9a
-
+  
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptatibus a, enim tenetur doloremque praesentium voluptatem ipsa reiciendis nobis neque, quo alias quia. Quod excepturi molestias inventore ipsum quia illum!</p>
 </body>
 </html>
 </body>
